fix navigate buttons

--- a/src/main/resources/FoodDetails.fxml
+++ b/src/main/resources/FoodDetails.fxml
@@ -70,6 +70,21 @@
                   <Font size="13.0" />
                </font>
             </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#bminavigate" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="BMI" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/bmi.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
       <GridPane layoutX="278.0" layoutY="246.0" prefHeight="326.0" prefWidth="578.0" AnchorPane.leftAnchor="278.0" AnchorPane.rightAnchor="20.399999999999977">
@@ -84,13 +99,34 @@
             <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="nameLabel" prefHeight="54.0" prefWidth="239.0" text="Label" />
-            <Label fx:id="caloriesLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.rowIndex="1" />
-            <Label fx:id="proteinLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="carbsLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.rowIndex="2" />
-            <Label fx:id="fatLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="servingSizeLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.rowIndex="3" />
-            <Label fx:id="servingUnitLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="nameLabel" prefHeight="54.0" prefWidth="239.0" text="Label">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="caloriesLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.rowIndex="1">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="proteinLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="carbsLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.rowIndex="2">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="fatLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="servingSizeLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.rowIndex="3">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="servingUnitLabel" prefHeight="54.0" prefWidth="239.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
          </children>
       </GridPane>
       <Pane layoutX="250.0" layoutY="95.0" prefHeight="118.0" prefWidth="633.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="250.39999999999998" AnchorPane.rightAnchor="-7.600000000000023">
@@ -101,12 +137,12 @@
                </font>
             </Label>
          </children></Pane>
-      <Button layoutX="338.0" layoutY="572.0" mnemonicParsing="false" onAction="#edit" prefHeight="50.0" prefWidth="130.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Edit" textFill="WHITE">
+      <Button layoutX="338.0" layoutY="572.0" mnemonicParsing="false" onAction="#edit" prefHeight="50.0" prefWidth="130.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Edit" textFill="WHITE">
          <font>
             <Font size="23.0" />
          </font>
       </Button>
-      <Button layoutX="598.0" layoutY="572.0" mnemonicParsing="false" onAction="#delete" prefHeight="50.0" prefWidth="130.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Delete" textFill="WHITE">
+      <Button layoutX="598.0" layoutY="572.0" mnemonicParsing="false" onAction="#delete" prefHeight="50.0" prefWidth="130.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Delete" textFill="WHITE">
          <font>
             <Font size="23.0" />
          </font>
