--- a/src/main/resources/bmi.fxml
+++ b/src/main/resources/bmi.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.FoodSuggestionController">
+<AnchorPane prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.BMI">
    <VBox layoutY="1.0" prefHeight="642.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
          <Pane prefHeight="200.0" prefWidth="200.0">
@@ -47,36 +47,6 @@
                <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                   <image>
                      <Image url="@assets/icons/search.png" />
-                  </image>
-               </ImageView>
-            </graphic>
-            <padding>
-               <Insets left="50.0" />
-            </padding>
-            <font>
-               <Font size="13.0" />
-            </font>
-         </Button>
-         <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="36.0" mnemonicParsing="false" onAction="#editFood" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Edit Food" textFill="WHITE">
-            <graphic>
-               <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@assets/icons/edit.png" />
-                  </image>
-               </ImageView>
-            </graphic>
-            <padding>
-               <Insets left="50.0" />
-            </padding>
-            <font>
-               <Font size="13.0" />
-            </font>
-         </Button>
-         <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="63.0" mnemonicParsing="false" onAction="#deleteFood" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Delete Food" textFill="WHITE">
-            <graphic>
-               <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@assets/icons/delete.png" />
                   </image>
                </ImageView>
             </graphic>
