--- a/src/main/resources/recipeDetails.fxml
+++ b/src/main/resources/recipeDetails.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,9 +13,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AddRecipe">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.RecipeDetails">
     <children>
         <VBox prefHeight="642.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -75,34 +73,76 @@
             </Button>
             </children>
         </VBox>
-        <GridPane layoutX="278.0" layoutY="246.0" prefHeight="378.0" prefWidth="582.0" AnchorPane.leftAnchor="278.0" AnchorPane.rightAnchor="16.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="52.80001220703127" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="283.9999938964844" minHeight="10.0" prefHeight="205.4" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="261.3999847412109" minHeight="0.0" prefHeight="68.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <TextField fx:id="nameField" prefHeight="56.0" promptText="Recipe name" />
-              <Button mnemonicParsing="false" onAction="#inesrtRecipe" prefHeight="50.0" prefWidth="130.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Add" textFill="WHITE" GridPane.rowIndex="2">
-                  <font>
-                      <Font size="23.0" />
-                  </font>
-              </Button>
-            <ListView fx:id="foodListView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-                <Text fx:id="actionStatus" layoutX="14.0" layoutY="14.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" />
-            </children>
-        </GridPane>
         <Pane layoutX="250.0" layoutY="95.0" prefHeight="118.0" prefWidth="633.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="250.39999999999998" AnchorPane.rightAnchor="-7.600000000000023">
             <children>
-                <Label layoutX="30.0" layoutY="34.0" text="Add New Recipe" textFill="WHITE">
+                <Label layoutX="30.0" layoutY="34.0" text="Recipe Details" textFill="WHITE">
                     <font>
                         <Font size="35.0" />
                     </font>
                 </Label>
             </children></Pane>
+      <GridPane layoutX="299.2" layoutY="210.0" prefHeight="162.0" prefWidth="535.0" AnchorPane.leftAnchor="299.2" AnchorPane.rightAnchor="42.40000000000009">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="96.00000610351563" minHeight="10.0" prefHeight="54.9999755859375" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="187.9999755859375" minHeight="10.0" prefHeight="50.20001220703125" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="218.19998779296876" minHeight="10.0" prefHeight="62.19998779296877" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label fx:id="nameLabel" text="Label">
+               <font>
+                  <Font name="System Bold" size="26.0" />
+               </font>
+            </Label>
+            <Label fx:id="caloriesLabel" text="Label" GridPane.rowIndex="1">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="proteinLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="fatLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="carbsLabel" text="Label" GridPane.rowIndex="2">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
+      <ListView fx:id="foodListView" layoutX="265.0" layoutY="376.0" prefHeight="177.0" prefWidth="584.0" />
+      <Button layoutX="571.0" layoutY="572.0" mnemonicParsing="false" onAction="#delete" prefHeight="55.0" prefWidth="150.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Delete" textFill="WHITE">
+         <font>
+            <Font size="23.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="28.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@assets/icons/delete.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+        <Button layoutX="383.0" layoutY="572.0" mnemonicParsing="false" onAction="#edit" prefHeight="55.0" prefWidth="150.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Edit" textFill="WHITE">
+            <font>
+                <Font size="23.0" />
+            </font>
+         <graphic>
+            <ImageView fitHeight="30.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@assets/icons/edit.png" />
+               </image>
+            </ImageView>
+         </graphic>
+        </Button>
     </children>
 </AnchorPane>
