--- a/src/main/resources/viewRecipe.fxml
+++ b/src/main/resources/viewRecipe.fxml
@@ -75,16 +75,16 @@
             </Button>
          </children>
       </VBox>
-      <GridPane layoutX="278.0" layoutY="278.0" prefHeight="326.0" prefWidth="578.0" AnchorPane.leftAnchor="277.6" AnchorPane.rightAnchor="19.600000000000023">
+      <GridPane layoutX="278.0" layoutY="233.0" prefHeight="391.0" prefWidth="578.0" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="278.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="233.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints maxHeight="145.4" minHeight="10.0" prefHeight="45.40001525878907" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="145.4" minHeight="10.0" prefHeight="69.40001831054687" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="320.79998168945315" minHeight="10.0" prefHeight="320.79998168945315" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ListView fx:id="listR" layoutX="278.0" layoutY="278.0" prefHeight="326.0" prefWidth="578.0" stylesheets="@assets/css/fullpackstyling.css" AnchorPane.leftAnchor="277.6" AnchorPane.rightAnchor="19.600000000000023" GridPane.rowIndex="1" />
+            <ListView fx:id="listR" layoutX="278.0" layoutY="278.0" prefHeight="295.0" prefWidth="578.0" stylesheets="@assets/css/fullpackstyling.css" AnchorPane.leftAnchor="277.6" AnchorPane.rightAnchor="19.600000000000023" GridPane.rowIndex="1" />
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
                   <TextField fx:id="searchTF" onKeyReleased="#searchByKeyword" prefHeight="26.0" prefWidth="438.0" />                  <Button graphicTextGap="10.0" mnemonicParsing="false" styleClass="button4" stylesheets="@assets/css/fullpackstyling.css" text="Search" textFill="WHITE">
