--- a/src/main/resources/ExerciceDetail.fxml
+++ b/src/main/resources/ExerciceDetail.fxml
@@ -65,41 +65,46 @@
             </font>
         </Button>
     </VBox>
-    <GridPane layoutX="283.0" layoutY="49.0" prefHeight="173.0" prefWidth="270.0">
+    <GridPane layoutX="283.0" layoutY="49.0" prefHeight="290.0" prefWidth="230.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.0" minWidth="10.0" prefWidth="126.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="130.0" minHeight="6.0" prefHeight="109.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="117.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="117.0" vgrow="SOMETIMES" />
         </rowConstraints>
         <children>
-            <Label fx:id="nameLabel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="236.0" text="test" wrapText="true">
+            <Label fx:id="nameLabel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="218.0" text="test" wrapText="true">
                 <font>
                     <Font name="System Bold" size="25.0" />
                 </font></Label>
 
-            <Label fx:id="descriptionLabel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="76.0" prefWidth="265.0" text="test" wrapText="true" GridPane.rowIndex="1">
+            <Label fx:id="descriptionLabel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="76.0" prefWidth="224.0" text="test" wrapText="true" GridPane.rowIndex="1">
                 <font>
                     <Font size="19.0" />
                 </font></Label>
+            <Label fx:id="muscleLabel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="99.0" prefWidth="224.0" text="test" wrapText="true" GridPane.rowIndex="2">
+                <font>
+                    <Font size="19.0" />
+                </font>
+         </Label>
         </children>
     </GridPane>
 
-    <Button fx:id="deleteButton" layoutX="438.0" layoutY="573.0" onAction="#handleDeleteButton" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Delete" />
-    <Button fx:id="modifyButton" layoutX="577.0" layoutY="573.0" onAction="#handleModifyButton" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Modify" />
-    <GridPane layoutX="586.0" layoutY="47.0" prefHeight="200.0" prefWidth="251.0">
+    <Button fx:id="deleteButton" layoutX="417.0" layoutY="483.0" onAction="#handleDeleteButton" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Delete" />
+    <Button fx:id="modifyButton" layoutX="531.0" layoutY="483.0" onAction="#handleModifyButton" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Modify" />
+    <GridPane layoutX="574.0" layoutY="92.0" prefHeight="200.0" prefWidth="251.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-        <children>
+      <children>
             <ImageView fx:id="imageView" fitHeight="199.0" fitWidth="246.0" pickOnBounds="true" />
-        </children>
+      </children>
     </GridPane>
-    <VBox fx:id="exercicesContainer" layoutX="283.0" layoutY="243.0" prefHeight="321.0" prefWidth="335.0" />
 
 
 </AnchorPane>
