--- a/src/main/resources/AjouterPlan.fxml
+++ b/src/main/resources/AjouterPlan.fxml
@@ -99,7 +99,7 @@
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@assets/icons/recipe.png" />
+                        <Image url="@img/icons8-exercise-96.png" />
                      </image>
                   </ImageView>
                </graphic>
