--- a/src/main/resources/PlanDetail.fxml
+++ b/src/main/resources/PlanDetail.fxml
@@ -56,6 +56,13 @@
         </Button>
         <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AfficherExercice" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Exercices" textFill="WHITE">
             <graphic>
+
+                    <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@img/icons8-exercise-96.png" />
+                        </image>
+                    </ImageView>
+
             </graphic>
             <padding>
                 <Insets left="50.0" />
