fixing client interface layout

--- a/src/main/resources/assets/css/fullpackstyling.css
+++ b/src/main/resources/assets/css/fullpackstyling.css
@@ -192,6 +192,10 @@
     -fx-font-size: 20px;
     -fx-text-fill: #000000;
 }
+.description-label {
+    -fx-font-size: 12px;
+    -fx-text-fill: #000000;
+}
 
 .exercise-label {
     -fx-font-size: 18px;
