--- a/src/main/resources/Client.fxml
+++ b/src/main/resources/Client.fxml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.Client">
-    <ScrollPane fitToWidth="true">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.Client">
+    <ScrollPane fitToWidth="true" fitToHeight="true" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
+
         <VBox style="-fx-padding: 10;" stylesheets="@assets/css/fullpackstyling.css">
             <GridPane fx:id="plansExercisesGrid" alignment="center" hgap="20" styleClass="my-grid-style" vgap="20">
                 <padding>
                     <Insets bottom="10" left="10" right="10" top="10" />
                 </padding> <!-- Correction ici -->
                 <!-- Les éléments (plans et exercices) seront ajoutés dynamiquement ici -->
+
             </GridPane>
+
+
         </VBox>
     </ScrollPane>
 </AnchorPane>
