--- a/src/main/resources/afficherCompetitionUser.fxml
+++ b/src/main/resources/afficherCompetitionUser.fxml
@@ -18,7 +18,7 @@
         <Label fx:id="dateDebutLabel" layoutX="325.0" layoutY="191.0" text="Label" />
         <Label fx:id="dateFinLabel" layoutX="325.0" layoutY="234.0" text="Label" />
         <Label fx:id="tarifLabel" layoutX="325.0" layoutY="273.0" text="Label" />
-        <Button fx:id="demanderParticipation" layoutX="455.0" layoutY="407.0" mnemonicParsing="false" onAction="#handleDemanderParticipationButtonClick" text="Demander Participation" />
+        <Button fx:id="demanderParticipation" layoutX="455.0" layoutY="407.0" mnemonicParsing="false" onAction="#handleDemanderParticipationButtonClick" prefHeight="26.0" prefWidth="142.0" text="Demander Participation" />
         <VBox prefHeight="633.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <Pane prefHeight="200.0" prefWidth="200.0">
@@ -34,7 +34,7 @@
                     <graphic>
                         <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@logo/add.png" />
+                                <Image url="@logo/calendrier22.png" />
                             </image>
                         </ImageView>
                     </graphic>
