--- a/src/main/resources/afficherDemande.fxml
+++ b/src/main/resources/afficherDemande.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +11,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherDemande">
     <VBox prefHeight="633.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
         <children>
@@ -23,11 +23,11 @@
                     </ImageView>
                 </children>
             </Pane>
-            <Button fx:id="retour" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleRetourButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Liste Demandes" textFill="WHITE">
+            <Button fx:id="retour" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleRetourButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="retour" textFill="WHITE">
                 <graphic>
                     <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@logo/add.png" />
+                            <Image url="@logo/retour22.png" />
                         </image>
                     </ImageView>
                 </graphic>
@@ -38,21 +38,51 @@
                     <Font size="13.0" />
                 </font>
             </Button>
-
-
-
         </children>
     </VBox>
-   <HBox layoutX="350.0" layoutY="14.0" prefHeight="100.0" prefWidth="200.0" />
+   <HBox alignment="CENTER" layoutX="250.0" prefHeight="114.0" prefWidth="550.0" style="-fx-background-color: #684fe7;">
+      <children>
+         <Label prefHeight="22.0" prefWidth="176.0" text="traiter les demandes" textFill="WHITE">
+            <font>
+               <Font name="Cambria Bold" size="18.0" />
+            </font>
+         </Label>
+      </children></HBox>
+    <Button fx:id="accepterBtn" alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="313.0" layoutY="450.0" mnemonicParsing="false" onAction="#handleAccepterButtonClick" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: #ffffff;" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="accepter">
+        <padding>
+            <Insets left="50.0" />
+        </padding>
+        <font>
+            <Font size="13.0" />
+        </font>
+    </Button>
 
+
+
+    <Button fx:id="refuserBtn" alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="482.0" layoutY="450.0" mnemonicParsing="false" onAction="#handleRefuserButtonClick" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: #ffffff;" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="refuser" textFill="#050505">
+        <padding>
+            <Insets left="50.0" />
+        </padding>
+        <font>
+            <Font size="13.0" />
+        </font>
+    </Button>
+      <ImageView fitHeight="25.0" fitWidth="21.0" layoutX="332.0" layoutY="471.0" pickOnBounds="true" preserveRatio="true">
+          <image>
+              <Image url="@logo/accepter2.png" />
+          </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="21.0" layoutX="504.0" layoutY="471.0" pickOnBounds="true" preserveRatio="true">
+          <image>
+              <Image url="@logo/refuser2.png" />
+          </image>
+      </ImageView>
     <children>
         <Label fx:id="codeP" layoutX="367.0" layoutY="218.0" text="Label" />
         <Label fx:id="codeU" layoutX="365.0" layoutY="274.0" text="Label" />
         <Label fx:id="codeC" layoutX="365.0" layoutY="312.0" text="Label" />
 
 
-        <Button fx:id="accepterBtn" layoutX="432.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleAccepterButtonClick" text="accepter" />
-        <Button fx:id="refuserBtn" layoutX="521.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleRefuserButtonClick" text="refuser" />
         <Label fx:id="desc" layoutX="353.0" layoutY="369.0" text="Label" />
     </children>
 </AnchorPane>
