--- a/src/main/resources/ajouterCompetition.fxml
+++ b/src/main/resources/ajouterCompetition.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -15,19 +17,69 @@
    <children>
       <TextField fx:id="libelle" layoutX="365.0" layoutY="244.0" prefHeight="26.0" prefWidth="134.0" promptText="libelle" />
       <TextField fx:id="tarifTxt" layoutX="365.0" layoutY="383.0" prefHeight="26.0" prefWidth="134.0" promptText="tarif en dinnars" />
-      <Button layoutX="404.0" layoutY="434.0" mnemonicParsing="false" onAction="#ajouterCompetition" text="Ajouter" />
       <DatePicker fx:id="dateDebut" layoutX="365.0" layoutY="291.0" prefHeight="26.0" prefWidth="134.0" promptText="date de début" />
       <DatePicker fx:id="dateFin" layoutX="365.0" layoutY="342.0" prefHeight="26.0" prefWidth="134.0" promptText="date de fin" />
-      <VBox alignment="TOP_CENTER" layoutX="-4.0" prefHeight="642.0" prefWidth="265.0" style="-fx-background-color: #4d3479;">
+      <VBox prefHeight="633.0" prefWidth="259.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../java/tn/esprit/images/iron_core.png" />
-               </image>
-            </ImageView>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/iron_core.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+
+
+            <Button fx:id="buttonAdd" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleListeCompetitionButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Liste compétition" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/search.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+            <Button fx:id="lienD" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleListeDemandeButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Liste Demande" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/search.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+            <Button  alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#ajouterCompetition" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Ajouter" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/add.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
-      <HBox alignment="CENTER" layoutX="261.0" prefHeight="100.0" prefWidth="549.0" style="-fx-background-color: #684fe7;">
+      <HBox alignment="CENTER" layoutX="259.0" prefHeight="110.0" prefWidth="554.0" style="-fx-background-color: #684fe7;">
          <children>
             <Label prefHeight="35.0" prefWidth="245.0" text="   Ajouter compétition" textFill="WHITE">
                <font>
