--- a/src/main/resources/listeCompetition.fxml
+++ b/src/main/resources/listeCompetition.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -8,24 +9,86 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.listeCompetition">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="-6.0" layoutY="-5.0" prefHeight="642.0" prefWidth="265.0" style="-fx-background-color: #4d3479;">
-         <children>
-            <ImageView fitHeight="150.0" fitWidth="178.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../java/tn/esprit/images/iron_core.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="lienP" text="Participation" textFill="WHITE" onMouseClicked="#handleParticipationLabelClick">
+   <VBox prefHeight="633.0" prefWidth="259.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <children>
+         <Pane prefHeight="200.0" prefWidth="200.0">
+            <children>
+               <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@logo/iron_core.png" />
+                  </image>
+               </ImageView>
+            </children>
+         </Pane>
+      
+            <Button fx:id="chercherBtn" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleSearchButtonClicked" prefHeight="50.0" prefWidth="259.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="chercher" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/search2.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
                <font>
-                  <Font size="18.0" />
+                  <Font size="13.0" />
                </font>
-            </Label>
-         </children></VBox>
+            </Button>
+         <Button fx:id="buttonAdd" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleAjouterCompetitionClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Ajouter compétition" textFill="WHITE">
+            <graphic>
+               <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@logo/add.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+            <padding>
+               <Insets left="50.0" />
+            </padding>
+            <font>
+               <Font size="13.0" />
+            </font>
+         </Button>
+         <Button fx:id="lienD" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleListeDemandeButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Liste Demande" textFill="WHITE">
+            <graphic>
+               <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@logo/search.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+            <padding>
+               <Insets left="50.0" />
+            </padding>
+            <font>
+               <Font size="13.0" />
+            </font>
+         </Button>
+         <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleCalendrierButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Calendrier" textFill="WHITE">
+            <graphic>
+               <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@logo/calendrier22.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+            <padding>
+               <Insets left="50.0" />
+            </padding>
+            <font>
+               <Font size="13.0" />
+            </font>
+         </Button>
+      </children>
+   </VBox>
       <HBox alignment="BOTTOM_CENTER" layoutX="259.0" prefHeight="68.0" prefWidth="542.0" style="-fx-background-color: #684fe7;">
          <children>
             <Label prefHeight="38.0" prefWidth="265.0" text="   Liste des compétitions" textFill="WHITE">
@@ -37,7 +100,7 @@
       </HBox>
       <HBox alignment="BOTTOM_RIGHT" layoutX="259.0" layoutY="64.0" prefHeight="34.0" prefWidth="542.0" style="-fx-background-color: #684fe7;">
          <children>
-            <Button fx:id="chercherBtn" mnemonicParsing="false" onAction="#handleSearchButtonClicked" text="Rechercher" />
+
             <TextField fx:id="chercherText" promptText="libelle" />
          </children>
       </HBox>
