--- a/src/main/resources/listeDemande.fxml
+++ b/src/main/resources/listeDemande.fxml
@@ -41,6 +41,21 @@
                     </font>
                 </Button>
 
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleAjouterParticipationClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Ajouter compétition" textFill="WHITE">
+                    <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@logo/add.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Button>
 
 
             </children>
