--- a/src/main/resources/modifierCompetition.fxml
+++ b/src/main/resources/modifierCompetition.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -8,20 +9,58 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.modifierCompetition">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="641.0" prefWidth="268.0" style="-fx-background-color: #4d3479;">
+      <VBox prefHeight="639.0" prefWidth="259.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="-6.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="142.0" fitWidth="170.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../java/tn/esprit/images/iron_core.png" />
-               </image>
-            </ImageView>
-         </children></VBox>
-      <HBox alignment="CENTER" layoutX="266.0" prefHeight="105.0" prefWidth="579.0" style="-fx-background-color: #684fe7;">
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/iron_core.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Button fx:id="retour" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleAnnulerButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="retoun" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/retour22.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+
+            <Button fx:id="modifierC" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="modifier" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/edit.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+
+      <HBox alignment="CENTER" layoutX="259.0" prefHeight="106.0" prefWidth="586.0" style="-fx-background-color: #684fe7;">
          <children>
             <Label text="Modifier compétition" textFill="WHITE">
                <font>
@@ -34,11 +73,9 @@
       <TextField fx:id="nbr" layoutX="475.0" layoutY="303.0" prefHeight="26.0" prefWidth="86.0" />
       <DatePicker fx:id="dateDebut" layoutX="431.0" layoutY="191.0" />
       <DatePicker fx:id="dateFin" layoutX="431.0" layoutY="255.0" />
-      <Button fx:id="modifierC" layoutX="492.0" layoutY="412.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" text="Modifier" />
       <Label layoutX="342.0" layoutY="142.0" text="libellé" />
       <Label layoutX="342.0" layoutY="195.0" text="date de début" />
       <Label layoutX="342.0" layoutY="259.0" text="Date de fin" />
       <Label layoutX="344.0" layoutY="308.0" text="Tarif" />
-      <Button fx:id="annuler" layoutX="580.0" layoutY="412.0" mnemonicParsing="false" text="Annuler" />
    </children>
 </AnchorPane>
