--- a/src/main/resources/modifierParticipation.fxml
+++ b/src/main/resources/modifierParticipation.fxml
@@ -52,6 +52,22 @@
                   <Font size="13.0" />
                </font>
             </Button>
+      
+                  <Button fx:id="modifierP" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" prefHeight="50.0" prefWidth="259.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="edit" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/edit.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
       <HBox alignment="CENTER" layoutX="259.0" prefHeight="100.0" prefWidth="542.0" style="-fx-background-color: #684fe7;">
@@ -63,21 +79,5 @@
             </Label>
          </children>
       </HBox>
-
-            <Button fx:id="modifierP" alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="436.0" layoutY="419.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" prefHeight="50.0" prefWidth="122.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="edit" textFill="WHITE">
-         <graphic>
-            <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@logo/edit.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <padding>
-            <Insets left="50.0" />
-         </padding>
-         <font>
-            <Font size="13.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
