--- a/src/main/resources/Client.fxml
+++ b/src/main/resources/Client.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,18 +10,22 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<?import javafx.scene.control.Button?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.Client">
-    <ScrollPane fitToWidth="true" fitToHeight="true" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="702.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.Client">
+    <ScrollPane fitToHeight="true" fitToWidth="true" layoutY="104.0" prefHeight="619.0" prefWidth="876.0" AnchorPane.bottomAnchor="-21.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
 
         <VBox style="-fx-padding: 10;" stylesheets="@assets/css/fullpackstyling.css">
-            <GridPane fx:id="plansExercisesGrid" alignment="center" hgap="20" styleClass="my-grid-style" vgap="20">
-                <padding>
-                    <Insets bottom="10" left="10" right="10" top="10" />
-                </padding> <!-- Correction ici -->
+            <GridPane fx:id="plansExercisesGrid" alignment="center" hgap="20.0" styleClass="my-grid-style" vgap="20.0"> <!-- Correction ici -->
                 <!-- Les éléments (plans et exercices) seront ajoutés dynamiquement ici -->
-                <ImageView fx:id="likeIcon"  />
+                <ImageView fx:id="likeIcon" />
+            <columnConstraints>
+               <ColumnConstraints />
+            </columnConstraints>
+            <rowConstraints>
+               <RowConstraints />
+            </rowConstraints>
+            <padding>
+               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
 
             </GridPane>
 
@@ -29,4 +33,9 @@
 
         </VBox>
     </ScrollPane>
+   <ImageView fitHeight="94.0" fitWidth="165.0" layoutX="389.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@img/iron_core_black.png" />
+      </image>
+   </ImageView>
 </AnchorPane>
